# HighPerf-Distributed-IM

./: .gitignore  CMakeLists.txt  README.md  stress_test_tcp.py
ChatClient/: chatbubble.h  chatdialog.cpp  chatsystem1.pro  database_schema.sql  forgetdialog.cpp  forgetdialog.h  forgetdialog.ui  friendmanager.h  global.cpp  global.h  httpmgr.cpp  localdb.h  logindialog.cpp  main.cpp  regdialog.cpp  usermgr.cpp  usermgr.h
ChatServer/: CMakeLists.txt  IM_Login_Flow_Deep_Dive.md
ChatServer/ChatServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CServer.cpp  CServer.h  CSession.cpp  CacheInvalidationSync.cpp  CacheInvalidationSync.h  ChatGrpcClient.cpp  ChatServer.cpp  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ChatServiceImpl.h  ConfigMgr.cpp  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MsgNode.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.cpp  UserMgr.cpp  UserMgr.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  crypto_utils.cpp  crypto_utils.h  data.h  generate_ptoto.bat  message.grpc.pb.cc  message.pb.cc
ChatServer2/: CMakeLists.txt  ChatServer.sln
ChatServer2/ChatServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  AsyncDBPool.h  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatGrpcClient.h  ChatServer.cpp  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ChatServiceImpl.h  ConfigMgr.cpp  ConfigMgr.h  LogicSystem.cpp  LogicSystem.h  MsgNode.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  UserMgr.h  VerifyGrpcClient.cpp  config.ini  const.h  generate_ptoto.bat  message.grpc.pb.h  message.pb.h  message.proto
GateServer/: CMakeLists.txt  GateServer.sln
GateServer/GateServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  GateServer.vcxproj  GateServer.vcxproj.filters  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  connect_test.cpp  const.h  generate_proto.bat  regen_proto.ps1
StatusServer/: CMakeLists.txt  StatusServer.sln
StatusServer/StatusServer/: AsioIOService.cpp  AsioIOServicePool.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ConfigMgr.cpp  ConfigMgr.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusServer.cpp  StatusServer.vcxproj  StatusServer.vcxproj.filters  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
VerifyServer/: CONFIG_README.md  config.js  config.json  const.js  email.js  mail_test.js  message.proto  package-lock.json  package.json  proto.js  redis.js  server.js  test_email.js
chatsystem1/: QObjectSingleton.h  README_FRIEND_SYSTEM.md  README_QUERY_IMPLEMENTATION.md  chatbubble.cpp  config.ini  friendmanager.cpp  httpmgr.h  localdb.cpp  logindialog.h  mainwindow.cpp  regdialog.h  regdialog.ui  singleton.h  src.qrc  tcpmgr.cpp  tcpmgr.h
docs/: STABILITY_OPTIMIZATION_REPORT.md
tests/: stress_test_tcp_1.py  test_cache_invalidation.cpp
